--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
             <div class="hero-overlay">
                 <h1 class="shiny-gold">The Fine Art Collection</h1>
                 <p class="shiny-sub">Where tradition meets the canvas.</p>
-                <a href="finearts.html" class="gold-btn">Enter Exhibition <i class="fas fa-arrow-right"></i></a>
+                <a href="finearts.html" class="gold-btn flash-text">Enter Exhibition <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
     </section>
@@ -194,3 +194,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
