--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 <body>
 
-    <div id="preloader">
-        <video id="intro-video" muted playsinline>
-            <source src="intro-anim.mp4" type="video/mp4">
-        </video>
+   <div id="preloader">
+        <img src="intro-anim.gif" id="intro-video" alt="Loading" style="width: 100%; height: 100%; object-fit: cover;">
     </div>
 
             </a>
@@ -200,6 +198,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
