--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
    <div id="preloader">
-        <img src="intro-anim.gif" id="intro-video" alt="Loading" style="width: 100%; height: 100%; object-fit: cover;">
+        <video id="intro-video" muted playsinline>
+            <source src="intro-anim.mp4" type="video/mp4">
+        </video>
     </div>
 
             </a>
@@ -198,6 +200,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
