--- a/gallery.html
+++ b/gallery.html
@@ -95,6 +95,11 @@
             <div class="logo-card"><img src="images/logo3.jpg" alt="Logo 3"></div>
             <div class="logo-card"><img src="images/logo4.jpg" alt="Logo 4"></div>
             <div class="logo-card"><img src="images/logo5.jpg" alt="Logo 5"></div>
+            <div class="logo-card"><img src="images/logo6.jpg" alt="Logo 6"></div>
+            <div class="logo-card"><img src="images/logo7.jpg" alt="Logo 7"></div>
+            <div class="logo-card"><img src="images/logo8.jpg" alt="Logo 8"></div>
+            <div class="logo-card"><img src="images/logo9.jpg" alt="Logo 9"></div>
+            <div class="logo-card"><img src="images/logo10.jpg" alt="Logo 10"></div>
         </div>
     </section>
 
@@ -111,8 +116,30 @@
             <div class="scroll-content">
                 <img src="images/ill1.jpg" alt="Illustration 1">
                 <img src="images/ill2.jpg" alt="Illustration 2">
-                <img src="images/ill3.jpg" alt="Illustration 3">
+                <img src="images/ill4.jpg" alt="Illustration 4">
+                <img src="images/ill5.jpg" alt="Illustration 5">
+                <img src="images/ill6.jpg" alt="Illustration 6">
+                <img src="images/ill7.jpg" alt="Illustration 7">
+                <img src="images/ill8.jpg" alt="Illustration 8">
+                <img src="images/ill9.jpg" alt="Illustration 9">
+                <img src="images/ill10.jpg" alt="Illustration 10">
+                <img src="images/ill11.jpg" alt="Illustration 11">
+                <img src="images/ill12.jpg" alt="Illustration 12">
+                <img src="images/ill13.jpg" alt="Illustration 13">
+                <img src="images/ill14.jpg" alt="Illustration 14">
+                <img src="images/ill15.jpg" alt="Illustration 15">
+                <img src="images/ill16.jpg" alt="Illustration 16">
+                <img src="images/ill17.jpg" alt="Illustration 17">
+                <img src="images/ill18.jpg" alt="Illustration 18">
+                <img src="images/ill19.jpg" alt="Illustration 19">
+                <img src="images/ill20.jpg" alt="Illustration 20">
+                <img src="images/ill21.jpg" alt="Illustration 21">
+                <img src="images/ill22.jpg" alt="Illustration 22">
+                <img src="images/ill23.jpg" alt="Illustration 23">
+                <img src="images/ill24.jpg" alt="Illustration 24">
+                <img src="images/ill25.jpg" alt="Illustration 25">
             </div>
+        </div>
         </div>
 
         <div class="behance-cta">
@@ -194,4 +221,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
