--- a/finearts.html
+++ b/finearts.html
@@ -238,8 +238,8 @@
     </div>
 
     <section class="curator-mini">
-        <p>"A curated selection exploring the Pnar identity through academic rigor and ancestral memory. Where stone lithography meets the digital canvas, capturing the echoes of what was and the motion of what is to come."</p>
-        <span class="sig">— Ohiwan Lamar</span>
+        <p>"A curated collection of printmaking, painting, and sculpture by Ohiwan Lamar, Wanhi i Challam, and Sanikawan Challam. Drawing from the folklore and landscapes of the Meghalaya hills, these works bridge ancient tradition and the contemporary world to reflect the vivid identity of Northeast India."</p>
+        <span class="sig">— M/s Lamar Art's</span>
     </section>
 
     <section class="spotlight-section">
@@ -432,3 +432,4 @@
     </script>
 </body>
 </html>
+
