--- a/finearts.html
+++ b/finearts.html
@@ -273,7 +273,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script>
         // --- CONFIGURATION ---
-        const fileExt = '.jpg'; // Using .jpg
+        const fileExt = '.webp'; // Using .haha thloh
         
         // FILE COUNTS
         const counts = {
@@ -407,3 +407,4 @@
     </script>
 </body>
 </html>
+
