--- a/finearts.html
+++ b/finearts.html
@@ -198,7 +198,8 @@
     </div>
 
     <section class="curator-mini">
-        <p>"A curated collection of printmaking, painting, and sculpture by Meghalaya artists — Ohiwan Lamar, Wanhi i Challam, Sanikawan Challam and more. Drawing from the folklore and landscapes of the Meghalaya hills, these works bridge ancient tradition and the contemporary world to reflect the vivid identity of Meghalaya and Northeast India."</p>
+        <p>"A curated collection of printmaking, painting, and sculpture by Meghalaya artists — Ohiwan Lamar, Wanhi i Challam, Sanikawan Challam and more.
+            Drawing from the folklore and landscapes of the Meghalaya hills, these works bridge ancient tradition and the contemporary world to reflect the vivid identity of Meghalaya and Northeast India."</p>
     </section>
 
     <section class="spotlight-section">
@@ -406,4 +407,5 @@
     </script>
 </body>
 </html>
+
 
