--- a/finearts.html
+++ b/finearts.html
@@ -198,8 +198,8 @@
     </div>
 
     <section class="curator-mini">
-        <p>"A curated collection of printmaking, painting, and sculpture by Meghalaya artists — Ohiwan Lamar, Wanhi i Challam, Sanikawan Challam and more.
-            Drawing from the folklore and landscapes of the Meghalaya hills, these works bridge ancient tradition and the contemporary world to reflect the vivid identity of Meghalaya and Northeast India."</p>
+        <p>"A curated collection of printmaking, painting, and sculpture by Meghalaya artists — Ohiwan Lamar, Wanhi i Challam, Sanikawan Challam and more.</p>
+        </p>Drawing from the folklore and landscapes of the Meghalaya hills, these works bridge ancient tradition and the contemporary world to reflect the vivid identity of Meghalaya and Northeast India."</p>
     </section>
 
     <section class="spotlight-section">
@@ -407,5 +407,6 @@
     </script>
 </body>
 </html>
+
 
 
