--- a/finearts.html
+++ b/finearts.html
@@ -42,8 +42,8 @@
         }
         
         .gallery-item img {
-            width: 100%; height: 100%; object-fit: cover;
-            border: 1px solid rgba(212, 175, 55, 0.3);
+            width: auto; height: 100%; object-fit: contain;
+            border: 2px solid var(212, 175, 55, 0.3);
             box-shadow: 0 0 20px rgba(0,0,0,0.9);
             display: block; pointer-events: none;
             transition: transform 0.4s ease, border-color 0.4s, box-shadow 0.4s, filter 0.4s;
@@ -414,6 +414,7 @@
     </script>
 </body>
 </html>
+
 
 
 
