--- a/finearts.html
+++ b/finearts.html
@@ -147,10 +147,10 @@
         .ohiwan-scroll-container::-webkit-scrollbar-thumb { background: var(--gold); border-radius: 4px; }
         
         .ohiwan-card {
-            flex: 0 0 auto; width: 300px; scroll-snap-align: center;
+            flex: 0 0 auto; width: auto; height: 260px; scroll-snap-align: center;
             border: 1px solid #333; position: relative; transition: 0.3s;
         }
-        .ohiwan-card img { width: 100%; height: 400px; object-fit: cover; display: block; filter: sepia(30%); }
+        .ohiwan-card img { width: auto; height: 400px; object-fit: cover; display: block; filter: sepia(30%); }
         .ohiwan-card:hover { transform: scale(1.02); border-color: var(--gold); }
         .ohiwan-card:hover img { filter: sepia(0%); }
 
@@ -180,7 +180,7 @@
             .art-row, .art-row:nth-child(even) { flex-direction: column; text-align: left; gap: 30px; }
             .art-info, .art-row:nth-child(even) .art-info { border: none; border-top: 3px solid var(--gold); padding: 20px 0; }
             .archive-grid { column-count: 2; }
-            .ohiwan-card { width: 260px; }
+            .ohiwan-card { width: auto; }
         }
         @media (max-width: 480px) { .archive-grid { column-count: 1; } }
     </style>
@@ -420,6 +420,7 @@
     </script>
 </body>
 </html>
+
 
 
 
