--- a/finearts.html
+++ b/finearts.html
@@ -41,7 +41,7 @@
             /* Emergency Border: If image breaks, you see a gold box */
             border: 2px solid var(--gold); 
             background: rgba(20, 20, 20, 0.5);
-            width: 120px; height: 120px
+            width: auto; height: 100%
         }
         
         .gallery-item img {
@@ -414,6 +414,7 @@
     </script>
 </body>
 </html>
+
 
 
 
