--- a/finearts.html
+++ b/finearts.html
@@ -41,8 +41,7 @@
             /* Emergency Border: If image breaks, you see a gold box */
             border: 2px solid var(--gold); 
             background: rgba(20, 20, 20, 0.5);
-            width: auto; height: 100%
-        }
+            width: 100%; height: 100%}
         
         .gallery-item img {
             width: auto; height: 100%; object-fit: contain;
@@ -414,6 +413,7 @@
     </script>
 </body>
 </html>
+
 
 
 
