--- a/finearts.html
+++ b/finearts.html
@@ -133,7 +133,7 @@
         .archive-item:hover img { filter: grayscale(0%) brightness(1); box-shadow: 0 10px 30px rgba(0,0,0,0.8); }
 
         /* === SECTION 7: OHIWAN LAMAR (Side Swipe) === */
-        .ohiwan-section { padding: 80px 0; background: #050505; border-top: 3px solid var(--gold); border-bottom: 3px solid var(--gold); }
+        .ohiwan-section { padding: 80px 0; background: #050505; border-top: 0px solid var(--gold); border-bottom: 3px solid var(--gold); }
         .ohiwan-scroll-container {
             display: flex; overflow-x: auto; gap: 70px; padding: 0 5%;
             scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch;
@@ -165,7 +165,7 @@
         overflow: hidden; 
         transition: max-height 1.5s ease; /* Smooth open */
         }
-        .archive-grid.expanded { max-height: 8000px !important; }
+        .archive-grid.expanded { max-height: 3500px !important; transition: max-height 2s ease-in-out; }
 
         /* Hide items beyond a certain number initially */
         .archive-grid:not(.expanded) .archive-item:nth-child(n+13) { display: none; } /* PC: Show 12 */
@@ -253,29 +253,29 @@
 
     <section class="spotlight-section">
         <div class="art-row">
-            <div class="art-image"><img src="images/ill1.jpg" alt="Featured 1"></div>
+            <div class="art-image"><img src="untitled2.webp" alt="Featured 1"></div>
             <div class="art-info">
                 <h2 class="art-title">Between Two Worlds</h2>
                 <div class="art-meta">Stone Lithography | 2024 | Available</div>
-                <p class="art-desc">A visual depiction of impact of environment shifting on a person.</p>
+                <p class="art-desc">A conceptual work speaking on shifting identities.</p>
                 <button class="enquire-btn">Inquire for Price</button>
             </div>
         </div>
         <div class="art-row">
-            <div class="art-image"><img src="images/ill2.jpg" alt="Featured 2"></div>
+            <div class="art-image"><img src="rootbridge1,jpg" alt="Featured 2"></div>
             <div class="art-info">
-                <h2 class="art-title">Rootbridge</h2>
+                <h2 class="art-title">Rootbridge II (Series Part)</h2>
                 <div class="art-meta">Acrylic Painting | 2023 | Sold</div>
-                <p class="art-desc">Nongriat Root-bridge</p>
+                <p class="art-desc">Meghalaya essense in colours</p>
                 <button class="enquire-btn">Sold Out</button>
             </div>
         </div>
           <div class="art-row">
-            <div class="art-image"><img src="images/ill1.jpg" alt="Featured 1"></div>
+            <div class="art-image"><img src="mawoh.jpg" alt="Featured 3"></div>
             <div class="art-info">
                 <h2 class="art-title">Head Study</h2>
                 <div class="art-meta">Terracotta | 2023 | Not For Sale</div>
-                <p class="art-desc">Portraiture in 3D form</p>
+                <p class="art-desc">Preserving memories in 3D form</p>
                 <button class="enquire-btn">Not For Sale</button>
     </section>
 
@@ -507,6 +507,7 @@ function toggleGrid(gridId, btn) {
     </script>
 </body>
 </html>
+
 
 
 
