--- a/finearts.html
+++ b/finearts.html
@@ -253,7 +253,7 @@
 
     <section class="spotlight-section">
         <div class="art-row">
-            <div class="art-image"><img src="untitled2.webp" alt="Featured 1"></div>
+            <div class="art-image"><img src="images/untitled2.webp" alt="Featured 1"></div>
             <div class="art-info">
                 <h2 class="art-title">Between Two Worlds</h2>
                 <div class="art-meta">Stone Lithography | 2024 | Available</div>
@@ -262,7 +262,7 @@
             </div>
         </div>
         <div class="art-row">
-            <div class="art-image"><img src="rootbridge1,jpg" alt="Featured 2"></div>
+            <div class="art-image"><img src="images/rootbridge1,jpg" alt="Featured 2"></div>
             <div class="art-info">
                 <h2 class="art-title">Rootbridge II (Series Part)</h2>
                 <div class="art-meta">Acrylic Painting | 2023 | Sold</div>
@@ -271,7 +271,7 @@
             </div>
         </div>
           <div class="art-row">
-            <div class="art-image"><img src="mawoh.jpg" alt="Featured 3"></div>
+            <div class="art-image"><img src="images/mawoh.jpg" alt="Featured 3"></div>
             <div class="art-info">
                 <h2 class="art-title">Head Study</h2>
                 <div class="art-meta">Terracotta | 2023 | Not For Sale</div>
@@ -507,6 +507,7 @@ function toggleGrid(gridId, btn) {
     </script>
 </body>
 </html>
+
 
 
 
