--- a/finearts.html
+++ b/finearts.html
@@ -262,7 +262,7 @@
             </div>
         </div>
         <div class="art-row">
-            <div class="art-image"><img src="images/rootbridge1,jpg" alt="Featured 2"></div>
+            <div class="art-image"><img src="images/rootbridge1.jpg" alt="Featured 2"></div>
             <div class="art-info">
                 <h2 class="art-title">Rootbridge II (Series Part)</h2>
                 <div class="art-meta">Acrylic Painting | 2023 | Sold</div>
@@ -507,6 +507,7 @@ function toggleGrid(gridId, btn) {
     </script>
 </body>
 </html>
+
 
 
 
