--- a/gallery.html
+++ b/gallery.html
@@ -38,8 +38,8 @@
     <section class="fine-art-hero">
         <div class="fine-art-frame">
             <div class="hero-overlay">
-                <h1 class="shiny-gold">The M/s Lamar Arts</h1>
-                <p class="shiny-sub">Finearts Exhibition</p>
+                <h1 class="shiny-gold">Fine Arts Collections</h1>
+                <p class="shiny-sub">M/s Lamar Art's</p>
                 <a href="finearts.html" class="gold-btn flash-text">Enter Exhibition <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
@@ -221,6 +221,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
