--- a/products.html
+++ b/products.html
@@ -286,8 +286,8 @@
 
     <section class="gallery-teaser">
         <div class="gallery-overlay">
-            <h2>The Art Gallery</h2>
-            <p>Explore original Paintings, Sculptures, and Wall Murals.</p>
+            <h2>Looking for Artworks?</h2>
+            <p>Explore original Printmaking, Paintings & Sculptures</p>
             <a href="gallery.html" class="gallery-btn">Enter Gallery <i class="fas fa-arrow-right"></i></a>
         </div>
     </section>
@@ -336,6 +336,7 @@
     <script src="products.js"></script>
 </body>
 </html>
+
 
 
 
