--- a/history.html
+++ b/history.html
@@ -171,7 +171,7 @@
 
         <div class="squad-card">
             <div class="squad-img">
-                <img src="images/samehi.jpg" alt="Samehi">
+                <img src="images/samehi.jpg" alt="Samehi Challam">
             </div>
             <h3>Samehi Challam</h3>
             <span class="role">Machine Operator & Manager</span>
@@ -179,30 +179,36 @@
 
         <div class="squad-card">
             <div class="squad-img">
-                <img src="wanhi.jpg" alt="Wanhi">
+                <img src="images/wanhi.jpg" alt="Wanhi i Challam">
             </div>
             <h3>Wanhi i Challam</h3>
             <span class="role">Visual Artist & Strategy</span>
         </div>
 
         <div class="squad-card">
-            <div class="squad-img"><img src="Daemi.jpg" alt="Daemi"></div>
+            <div class="squad-img">
+                <img src="images/daemi.jpg" alt="Da-e-mi Biam">
+            </div>
             <h3>Da-e-mi Biam</h3>
             <span class="role">Production Manager</span>
         </div>
 
         <div class="squad-card">
-            <div class="squad-img"><img src="Trei.jpg" alt="Trei"></div>
+            <div class="squad-img">
+                <img src="images/dapoitre.jpg" alt="Dapoitre-i Lamar">
+            </div>
             <h3>Dapoitre-i Lamar</h3>
             <span class="role">Adviser & Technical Specialist</span>
         </div>
-        
+
         <div class="squad-card">
-            <div class="squad-img"><img src="ever.jpg" alt="Ever"></div>
+            <div class="squad-img">
+                <img src="images/ever.jpg" alt="Ever">
+            </div>
             <h3>Ever</h3>
             <span class="role">Intern</span>
         </div>
-        
+
         </div>
 </section>
         </div>
@@ -247,4 +253,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
