--- a/history.html
+++ b/history.html
@@ -228,30 +228,67 @@
         </div>
     </section>
 
-    <section class="fine-art-preview">
-        <div class="art-preview-content">
-            <h2>The Artist Behind The Brand</h2>
-            <p>Before the digital machines, there was the canvas. Explore the original paintings and fine art journey of our founder, Ohiwan Lamar.</p>
-            <a href="gallery.html" class="art-btn">View Art Gallery <i class="fas fa-palette"></i></a>
+    <section class="fine-art-preview premium-dark-mode">
+    <div class="premium-content">
+        <h2 class="gold-title">The Artist Behind The Brand</h2>
+        <div class="gold-divider"></div>
+        <p class="silver-text">"Before the machine, there was the hand. Before the print, there was the painting."</p>
+        
+        <div class="museum-grid">
+            <div class="frame">
+                <img src="images/painting1.jpg" alt="Painting by Ohiwan">
+            </div>
+            <div class="frame center-frame">
+                <img src="images/painting2.jpg" alt="Painting by Ohiwan">
+            </div>
+            <div class="frame">
+                <img src="images/painting3.jpg" alt="Painting by Ohiwan">
+            </div>
         </div>
+
+        <div class="cta-container">
+            <p class="artist-name">- Ohiwan Lamar -</p>
+            <a href="gallery.html" class="gold-btn">Enter Private Gallery</a>
+        </div>
+    </div>
+</section>
     </section>
 
     <footer>
-        <div class="footer-container">
-            <div class="footer-col">
-                <h4><i class="fas fa-map-marker-alt"></i> Visit Us</h4>
-                <div class="address-box">M/s Lamar Arts Newhill, Jowai</div>
+    <div class="footer-container">
+        <div class="footer-col">
+            <h4><i class="fas fa-map-marker-alt"></i> Visit Us</h4>
+            <div class="address-box">
+                <strong>Shop 1:</strong><br>
+                M/s Lamar Arts Newhill,<br>
+                Loomsooiung Jowai, West Jaintia Hills,<br>
+                Meghalaya - 793150 (Near Petrol Pump)
             </div>
-            <div class="footer-col">
-                <h4>Contact</h4>
-                <p>9862330569 | lamararts123@gmail.com</p>
+            <br>
+            <div class="address-box">
+                <strong>Shop 2:</strong><br>
+                M/s Lamar Arts, Iawmusiang Jowai,<br>
+                West Jaintia Hills, Meghalaya - 793150<br>
+                (Opp. Iaphi Complex Building)
             </div>
         </div>
-        <div class="copyright">© 2026 M/s Lamar Art's.</div>
-    </footer>
 
-    <script src="script.js"></script>
-</body>
-</html>
+        <div class="footer-col">
+            <h4>Contact</h4>
+            <p><i class="fab fa-whatsapp"></i> 9862330569</p>
+            <p><i class="fas fa-envelope"></i> lamararts123@gmail.com</p>
+            <br>
+            <p><a href="https://www.facebook.com/profile.php?id=61570825532138" target="_blank" style="color:white"><i class="fab fa-facebook-f"></i> Facebook Page</a></p>
+            <p><a href="https://www.instagram.com/__lamararts__" style="color:var(--magenta)"><i class="fab fa-instagram"></i> @__lamararts__</a></p>
+        </div>
+
+        <div class="footer-col map-col">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600!2d92.19!3d25.44!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDI2JzI0LjAiTiA5MsKwMTEnMjQuMCJF!5e0!3m2!1sen!2sin!4v1600000000000!5m2!1sen!2sin" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </div>
+    <div class="copyright">
+        © 2026 M/s Lamar Art's. "Beyond Imagination & Creativity"
+    </div>
+</footer>
 
 
