--- a/history.html
+++ b/history.html
@@ -45,7 +45,7 @@
     </section>
 
     <div class="timeline-wrapper">
-        <div class="timeline-line"></div>
+        <div class="timeline-wrapper" style="overflow: hidden;">
 
         <section class="chapter vintage-chapter" id="origin">
             <div class="content-box left">
@@ -290,5 +290,6 @@
         © 2026 M/s Lamar Art's. "Beyond Imagination & Creativity"
     </div>
 </footer>
+
 
 
