--- a/history.html
+++ b/history.html
@@ -44,8 +44,11 @@
         </div>
     </section>
 
-    <div class="timeline-wrapper">
-        <div class="timeline-wrapper" style="overflow: hidden;">
+    <div class="timeline-wrapper" style="overflow: hidden;">
+    
+    <div class="timeline-line"></div>
+
+    <section class="chapter vintage-chapter" id="origin">
 
         <section class="chapter vintage-chapter" id="origin">
             <div class="content-box left">
@@ -236,13 +239,13 @@
         
         <div class="museum-grid">
             <div class="frame">
-                <img src="images/painting1.jpg" alt="Painting by Ohiwan">
+                <img src="images/ohiwan1.webp" alt="Painting by Ohiwan">
             </div>
             <div class="frame center-frame">
-                <img src="images/painting2.jpg" alt="Painting by Ohiwan">
+                <img src="images/ohiwan3.webp" alt="Painting by Ohiwan">
             </div>
             <div class="frame">
-                <img src="images/painting3.jpg" alt="Painting by Ohiwan">
+                <img src="images/ohiwan12.webp" alt="Painting by Ohiwan">
             </div>
         </div>
 
@@ -290,6 +293,7 @@
         © 2026 M/s Lamar Art's. "Beyond Imagination & Creativity"
     </div>
 </footer>
+
 
 
 
